--- a/eu.skribisto.skribisto.yml
+++ b/eu.skribisto.skribisto.yml
@@ -8,6 +8,7 @@ finish-args:
   - --share=network
   - --socket=fallback-x11
   - --socket=wayland
+  - --socket=session-dbus
   - --filesystem=home
   - --device=dri
 separate-locales: false
