--- a/eu.skribisto.skribisto.yml
+++ b/eu.skribisto.skribisto.yml
@@ -1,6 +1,6 @@
 app-id: eu.skribisto.skribisto
 runtime: org.kde.Platform
-runtime-version: '5.15'
+runtime-version: '5.15-21.08'
 sdk: org.kde.Sdk
 command: skribisto
 finish-args:
