--- a/eu.skribisto.skribisto.yml
+++ b/eu.skribisto.skribisto.yml
@@ -24,3 +24,6 @@ modules:
         url: https://github.com/jacquetc/skribisto.git
         tag: v1.9.35
         commit: 0a2951e2888d6809920ce3ea740612041dd89cfa
+        x-checker-data:
+          type: git
+          tag-pattern: ^v([\d.]+)
